없는영화 업데이트

--- a/scripts/team3_data_collection_now_playing_movies.ipynb
+++ b/scripts/team3_data_collection_now_playing_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "\n",
     "now_playing = []\n",
     "for i in range(1,1000):\n",
-    "    url = 'https://api.themoviedb.org/3/movie/now_playing?api_key={1}&language=ko-KR&page={0}'.format(i,'36927ad1d2817ff0fa31947e47d186fd')\n",
+    "    url = 'https://api.themoviedb.org/3/movie/now_playing?api_key={1}&language=ko-KR&page={0}'.format(i,'5ecfbcb3280f5e9f7898c3ca00acca81')\n",
     "    resp = requests.get(url)\n",
     "    now_playing.append(json.loads(resp.content))\n",
     "\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# now_playing_movies.to_csv(\"../data-files/now_playing_movies.csv\", header=True, index=True)"
+    "now_playing_movies.to_csv(\"../data-files/now_playing_movies.csv\", header=True, index=True)"
    ]
   },
   {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,14 +426,91 @@
     "                       password=\"mysql\",\n",
     "                       charset=\"utf8\")\n",
     "cursor = conn.cursor()\n",
-    "\n",
-    "# cursor.execute('DELETE FROM now_playing_movies')\n",
+    "error_list = []\n",
+    "cursor.execute('DELETE FROM actor')\n",
+    "cursor.execute('DELETE FROM now_playing_movies')\n",
     "for movie_id in now_playing_movies_ids.values:\n",
-    "    # print(type(movie_id), movie_id)  # movie_id type이 nd.arrary임. \n",
-    "    sql= \"INSERT INTO now_playing_movies VALUES(%s)\"\n",
-    "    cursor.execute(sql, movie_id[0]) \n",
+    "    try:\n",
+    "        # print(type(movie_id), movie_id)  # movie_id type이 nd.arrary임. \n",
+    "        sql= \"INSERT INTO now_playing_movies VALUES(%s)\"\n",
+    "        cursor.execute(sql, movie_id[0])\n",
+    "    except:\n",
+    "        error_list.append(movie_id)\n",
     "    \n",
     "conn.commit()\n",
+    "cursor.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#없는 영화 업데이트\n",
+    "\n",
+    "popular_movies = []\n",
+    "for i in error_list:\n",
+    "        for e in i:\n",
+    "                url=\"https://api.themoviedb.org/3/movie/{0}?api_key={1}&language=ko-KR\".format(e,'36927ad1d2817ff0fa31947e47d186fd')\n",
+    "                response = requests.get(url)\n",
+    "                popular_movies.append(json.loads(response.content))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies2 = pd.DataFrame(popular_movies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(34, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. DB에 저장 ( \"resource you requested could not be found.\"행 영화는 제거하고 필요한 컬럼만 가져온 후 저장)\n",
+    "import numpy as np\n",
+    "# 1. connect\n",
+    "conn = pymysql.connect(host=\"127.0.0.1\", port=3306, db='finalteam3', user=\"kdigital\", password=\"mysql\", charset=\"utf8\")\n",
+    "\n",
+    "# 2. get command object\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# cursor.execute(\"delete from movie\") #기존 데이터를 지울 때 주석을 풀어주세요 \n",
+    "\n",
+    "error_list = []   ##결과 18개\n",
+    "            \n",
+    "# movies2['original_language'] = movies2['original_language'].apply(lambda ol: ol if ol else '')\n",
+    "movies2['overview'] = movies2['overview'].apply(lambda ov : ov if str(ov) != 'nan' else '')\n",
+    "movies2['release_date'] = movies2['release_date'].apply(lambda ov : ov if str(ov) != 'nan' else '')\n",
+    "movies2['poster_path'] = movies2['poster_path'].apply(lambda ov : ov if str(ov) != 'nan' else '')\n",
+    "print(movies2.values.shape)\n",
+    "##결과: 630186 entries  ???????????????\n",
+    "\n",
+    "# 3. execute command\n",
+    "sql = \"\"\"insert into movie (movie_id, title, subtitle, original_language, overview, popularity, release_date, vote_average, vote_count, posterpath) \n",
+    "        values (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s)\"\"\"\n",
+    "for movie in movies2.values:\n",
+    "    cursor.execute(sql, list(movie[list(np.array([9, 24, 12, 11, 13, 14, 18, 26, 27, 15]) - 3)]))\n",
+    "\n",
+    "# movie3.append(list(movies2.values)) ##결과: 467108 entries    ????????????????????\n",
+    "                \n",
+    "\n",
+    "conn.commit() # confirm previous execution\n",
+    "# 4. close resource\n",
     "cursor.close()\n",
     "conn.close()"
    ]
