--- a/scripts/team3_data_collection_now_playing_movies.ipynb
+++ b/scripts/team3_data_collection_now_playing_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,6 +203,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>adult</th>\n",
+       "      <th>backdrop_path</th>\n",
+       "      <th>genre_ids</th>\n",
        "      <th>movie_id</th>\n",
        "      <th>original_language</th>\n",
        "      <th>subtitle</th>\n",
@@ -211,6 +214,7 @@
        "      <th>posterpath</th>\n",
        "      <th>release_date</th>\n",
        "      <th>title</th>\n",
+       "      <th>video</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
        "    </tr>\n",
@@ -218,53 +222,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>/lNyLSOKMMeUPr1RsL4KcRuIXwHt.jpg</td>\n",
+       "      <td>[878, 28, 12]</td>\n",
        "      <td>580489</td>\n",
        "      <td>en</td>\n",
        "      <td>Venom: Let There Be Carnage</td>\n",
        "      <td>연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...</td>\n",
-       "      <td>11473.714</td>\n",
+       "      <td>10424.410</td>\n",
        "      <td>/1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg</td>\n",
        "      <td>2021-09-30</td>\n",
        "      <td>베놈 2: 렛 데어 비 카니지</td>\n",
+       "      <td>False</td>\n",
        "      <td>7.2</td>\n",
-       "      <td>3947</td>\n",
+       "      <td>4087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>/5uVhMGsps81CN0S4U9NF0Z4tytG.jpg</td>\n",
+       "      <td>[28, 35, 80, 53]</td>\n",
        "      <td>512195</td>\n",
        "      <td>en</td>\n",
        "      <td>Red Notice</td>\n",
        "      <td>인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...</td>\n",
-       "      <td>3991.047</td>\n",
+       "      <td>3819.259</td>\n",
        "      <td>/gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg</td>\n",
        "      <td>2021-11-04</td>\n",
        "      <td>레드 노티스</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>1716</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>1788</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movie_id original_language                     subtitle  \\\n",
-       "0    580489                en  Venom: Let There Be Carnage   \n",
-       "1    512195                en                   Red Notice   \n",
+       "   adult                     backdrop_path         genre_ids  movie_id  \\\n",
+       "0  False  /lNyLSOKMMeUPr1RsL4KcRuIXwHt.jpg     [878, 28, 12]    580489   \n",
+       "1  False  /5uVhMGsps81CN0S4U9NF0Z4tytG.jpg  [28, 35, 80, 53]    512195   \n",
+       "\n",
+       "  original_language                     subtitle  \\\n",
+       "0                en  Venom: Let There Be Carnage   \n",
+       "1                en                   Red Notice   \n",
        "\n",
        "                                            overview  popularity  \\\n",
-       "0  연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...   11473.714   \n",
-       "1  인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...    3991.047   \n",
+       "0  연쇄살인마 클리터스 캐서디(우디 해럴슨)가 사형선고를 받는다. 죽을 생각이 전혀 없...   10424.410   \n",
+       "1  인터폴이 중범죄 피의자를 대상으로 내리는 전 세계적 경보인 레드 노티스. 세계 곳곳...    3819.259   \n",
        "\n",
-       "                         posterpath release_date             title  \\\n",
-       "0  /1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg   2021-09-30  베놈 2: 렛 데어 비 카니지   \n",
-       "1  /gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg   2021-11-04            레드 노티스   \n",
+       "                         posterpath release_date             title  video  \\\n",
+       "0  /1Lh9LER4xRQ3INFFi2dfS2hpRwv.jpg   2021-09-30  베놈 2: 렛 데어 비 카니지  False   \n",
+       "1  /gG06Uu6UQseYaPx1RU2PQjFEUKK.jpg   2021-11-04            레드 노티스  False   \n",
        "\n",
        "   vote_average  vote_count  \n",
-       "0           7.2        3947  \n",
-       "1           6.9        1716  "
+       "0           7.2        4087  \n",
+       "1           6.8        1788  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,12 +294,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "adult                0\n",
+       "backdrop_path        0\n",
+       "genre_ids            0\n",
        "movie_id             0\n",
        "original_language    0\n",
        "subtitle             0\n",
@@ -292,12 +311,13 @@
        "posterpath           0\n",
        "release_date         0\n",
        "title                0\n",
+       "video                0\n",
        "vote_average         0\n",
        "vote_count           0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -350,11 +370,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>566525</td>\n",
+       "      <td>589761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>589761</td>\n",
+       "      <td>566525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -362,15 +382,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>195</th>\n",
-       "      <td>447200</td>\n",
+       "      <td>769749</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>588099</td>\n",
+       "      <td>579047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>424277</td>\n",
+       "      <td>4232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
@@ -378,7 +398,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>8373</td>\n",
+       "      <td>672741</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -390,19 +410,19 @@
        "0      580489\n",
        "1      512195\n",
        "2      585245\n",
-       "3      566525\n",
-       "4      589761\n",
+       "3      589761\n",
+       "4      566525\n",
        "..        ...\n",
-       "195    447200\n",
-       "196    588099\n",
-       "197    424277\n",
+       "195    769749\n",
+       "196    579047\n",
+       "197      4232\n",
        "198    712121\n",
-       "199      8373\n",
+       "199    672741\n",
        "\n",
        "[200 rows x 1 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,6 +447,7 @@
     "                       charset=\"utf8\")\n",
     "cursor = conn.cursor()\n",
     "error_list = []\n",
+    "cursor.execute('DELETE FROM crew')\n",
     "cursor.execute('DELETE FROM actor')\n",
     "cursor.execute('DELETE FROM now_playing_movies')\n",
     "for movie_id in now_playing_movies_ids.values:\n",
@@ -444,19 +465,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'error_list' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/nl/6ztwqs3s0jvf3h0djw2p3ms00000gn/T/ipykernel_87046/3228423260.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0merror_list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'error_list' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
