--- a/scripts/team3_data_collection_cast.ipynb
+++ b/scripts/team3_data_collection_cast.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1573,21 +1573,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\.conda\\envs\\ykseo\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3441: DtypeWarning: Columns (1,4,7,12,17,23) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "/Users/parkseonghun/opt/miniconda3/envs/kdigital-busan/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (1,4,7,12,17,23) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
     }
    ],
    "source": [
     "# 영화id를 사용하기 위해 영화정보 파일가져오기 \n",
-    "tmdb_movie_list = pd.read_csv('../data-files/total_tmdbmovielist.csv',index_col=0) "
+    "tmdb_movie_list = pd.read_csv('../data-files/total_tmdbmovielist.csv',index_col=0, lineterminator='\\n') "
    ]
   },
   {
@@ -1622,17 +1622,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 현재 상영 중인 영화\n",
-    "now_playing_movies=pd.read_csv(\"../data-files/now_playing_movies.csv\", index_col=0)"
+    "now_playing_movies=pd.read_csv(\"../data-files/now_playing_movies.csv\", index_col=0, lineterminator='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1763,7 @@
        "[200 rows x 1 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,7 +1803,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1870,7 @@
        "      <td>Acting</td>\n",
        "      <td>Tom Hardy</td>\n",
        "      <td>Tom Hardy</td>\n",
-       "      <td>44.119</td>\n",
+       "      <td>43.931</td>\n",
        "      <td>/9bXUMLOBCcnhcUGtfw0pdqbvpiH.jpg</td>\n",
        "      <td>1</td>\n",
        "      <td>Eddie Brock / Venom</td>\n",
@@ -1865,7 +1885,7 @@
        "      <td>Acting</td>\n",
        "      <td>Woody Harrelson</td>\n",
        "      <td>Woody Harrelson</td>\n",
-       "      <td>22.604</td>\n",
+       "      <td>20.394</td>\n",
        "      <td>/igxYDQBbTEdAqaJxaW6ffqswmUU.jpg</td>\n",
        "      <td>7</td>\n",
        "      <td>Cletus Kasady / Carnage</td>\n",
@@ -1882,15 +1902,15 @@
        "1  False       2  57755               Acting  Woody Harrelson   \n",
        "\n",
        "     original_name  popularity                      profile_path  cast_id  \\\n",
-       "0        Tom Hardy      44.119  /9bXUMLOBCcnhcUGtfw0pdqbvpiH.jpg        1   \n",
-       "1  Woody Harrelson      22.604  /igxYDQBbTEdAqaJxaW6ffqswmUU.jpg        7   \n",
+       "0        Tom Hardy      43.931  /9bXUMLOBCcnhcUGtfw0pdqbvpiH.jpg        1   \n",
+       "1  Woody Harrelson      20.394  /igxYDQBbTEdAqaJxaW6ffqswmUU.jpg        7   \n",
        "\n",
        "                 character                 credit_id  movie_id  \n",
        "0      Eddie Brock / Venom  5c5b3ebfc3a3683cc6885550    580489  \n",
        "1  Cletus Kasady / Carnage  5c86bc069251410d3616ff8e    580489  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18790,7 +18810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18805,7 +18825,7 @@
     "                       charset=\"utf8\")\n",
     "\n",
     "cursor = conn.cursor()\n",
-    "cursor.execute('DELETE FROM actor')\n",
+    "# cursor.execute('DELETE FROM actor')\n",
     "\n",
     "error_list=[]\n",
     "for a in casts.values:\n",
