--- a/scripts/team3_data_collection_crew.ipynb
+++ b/scripts/team3_data_collection_crew.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,17 +196,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "# 현재 상영 중인 영화\n",
-    "now_playing_movies=pd.read_csv(\"../data-files/now_playing_movies.csv\", index_col=0)"
+    "\n",
+    "now_playing_movies=pd.read_csv(\"../data-files/top_rated_movies.csv\", index_col=0, lineterminator='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -219,12 +221,12 @@
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
       " 0   adult              200 non-null    bool   \n",
-      " 1   backdrop_path      200 non-null    object \n",
+      " 1   backdrop_path      199 non-null    object \n",
       " 2   genre_ids          200 non-null    object \n",
       " 3   id                 200 non-null    int64  \n",
       " 4   original_language  200 non-null    object \n",
       " 5   original_title     200 non-null    object \n",
-      " 6   overview           166 non-null    object \n",
+      " 6   overview           180 non-null    object \n",
       " 7   popularity         200 non-null    float64\n",
       " 8   poster_path        200 non-null    object \n",
       " 9   release_date       200 non-null    object \n",
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -273,23 +275,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>580489</td>\n",
+       "      <td>19404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>512195</td>\n",
+       "      <td>278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>585245</td>\n",
+       "      <td>238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>589761</td>\n",
+       "      <td>724089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>566525</td>\n",
+       "      <td>482321</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -297,23 +299,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>195</th>\n",
-       "      <td>769749</td>\n",
+       "      <td>42229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
-       "      <td>579047</td>\n",
+       "      <td>472454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>4232</td>\n",
+       "      <td>489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
-       "      <td>712121</td>\n",
+       "      <td>655</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
-       "      <td>672741</td>\n",
+       "      <td>455661</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -322,22 +324,22 @@
       ],
       "text/plain": [
        "         id\n",
-       "0    580489\n",
-       "1    512195\n",
-       "2    585245\n",
-       "3    589761\n",
-       "4    566525\n",
+       "0     19404\n",
+       "1       278\n",
+       "2       238\n",
+       "3    724089\n",
+       "4    482321\n",
        "..      ...\n",
-       "195  769749\n",
-       "196  579047\n",
-       "197    4232\n",
-       "198  712121\n",
-       "199  672741\n",
+       "195   42229\n",
+       "196  472454\n",
+       "197     489\n",
+       "198     655\n",
+       "199  455661\n",
        "\n",
        "[200 rows x 1 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -384,31 +386,174 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14968 entries, 0 to 14967\n",
+      "RangeIndex: 13738 entries, 0 to 13737\n",
       "Data columns (total 12 columns):\n",
       " #   Column                Non-Null Count  Dtype  \n",
       "---  ------                --------------  -----  \n",
-      " 0   adult                 14968 non-null  bool   \n",
-      " 1   gender                14968 non-null  int64  \n",
-      " 2   id                    14968 non-null  int64  \n",
-      " 3   known_for_department  14968 non-null  object \n",
-      " 4   name                  14968 non-null  object \n",
-      " 5   original_name         14968 non-null  object \n",
-      " 6   popularity            14968 non-null  float64\n",
-      " 7   profile_path          2116 non-null   object \n",
-      " 8   credit_id             14968 non-null  object \n",
-      " 9   department            14968 non-null  object \n",
-      " 10  job                   14968 non-null  object \n",
-      " 11  movie_id              14968 non-null  int64  \n",
+      " 0   adult                 13738 non-null  bool   \n",
+      " 1   gender                13738 non-null  int64  \n",
+      " 2   id                    13738 non-null  int64  \n",
+      " 3   known_for_department  13738 non-null  object \n",
+      " 4   name                  13738 non-null  object \n",
+      " 5   original_name         13738 non-null  object \n",
+      " 6   popularity            13738 non-null  float64\n",
+      " 7   profile_path          2332 non-null   object \n",
+      " 8   credit_id             13738 non-null  object \n",
+      " 9   department            13738 non-null  object \n",
+      " 10  job                   13738 non-null  object \n",
+      " 11  movie_id              13738 non-null  int64  \n",
       "dtypes: bool(1), float64(1), int64(3), object(7)\n",
-      "memory usage: 1.3+ MB\n"
+      "memory usage: 1.2+ MB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adult</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>id</th>\n",
+       "      <th>known_for_department</th>\n",
+       "      <th>name</th>\n",
+       "      <th>original_name</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>profile_path</th>\n",
+       "      <th>credit_id</th>\n",
+       "      <th>department</th>\n",
+       "      <th>job</th>\n",
+       "      <th>movie_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8311</td>\n",
+       "      <td>Crew</td>\n",
+       "      <td>Farah Khan</td>\n",
+       "      <td>Farah Khan</td>\n",
+       "      <td>1.400</td>\n",
+       "      <td>/yfmm3VIGRZ8RDRQ0pjn3Vizw6WC.jpg</td>\n",
+       "      <td>57a3054a9251417c57000d7a</td>\n",
+       "      <td>Crew</td>\n",
+       "      <td>Choreographer</td>\n",
+       "      <td>19404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35770</td>\n",
+       "      <td>Directing</td>\n",
+       "      <td>Yash Chopra</td>\n",
+       "      <td>Yash Chopra</td>\n",
+       "      <td>0.656</td>\n",
+       "      <td>/uDthb94NlawtgRT8BKufFkZdJR5.jpg</td>\n",
+       "      <td>57a304a39251410cd20008a5</td>\n",
+       "      <td>Production</td>\n",
+       "      <td>Producer</td>\n",
+       "      <td>19404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35771</td>\n",
+       "      <td>Production</td>\n",
+       "      <td>Aditya Chopra</td>\n",
+       "      <td>Aditya Chopra</td>\n",
+       "      <td>0.732</td>\n",
+       "      <td>None</td>\n",
+       "      <td>57a3042b9251412769000193</td>\n",
+       "      <td>Writing</td>\n",
+       "      <td>Screenplay</td>\n",
+       "      <td>19404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35771</td>\n",
+       "      <td>Production</td>\n",
+       "      <td>Aditya Chopra</td>\n",
+       "      <td>Aditya Chopra</td>\n",
+       "      <td>0.732</td>\n",
+       "      <td>None</td>\n",
+       "      <td>52fe47d69251416c750a71af</td>\n",
+       "      <td>Directing</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>19404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35771</td>\n",
+       "      <td>Production</td>\n",
+       "      <td>Aditya Chopra</td>\n",
+       "      <td>Aditya Chopra</td>\n",
+       "      <td>0.732</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5d6a2a3a7776f0000f7387b8</td>\n",
+       "      <td>Writing</td>\n",
+       "      <td>Dialogue</td>\n",
+       "      <td>19404</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   adult  gender     id known_for_department           name  original_name  \\\n",
+       "0  False       1   8311                 Crew     Farah Khan     Farah Khan   \n",
+       "1  False       2  35770            Directing    Yash Chopra    Yash Chopra   \n",
+       "2  False       2  35771           Production  Aditya Chopra  Aditya Chopra   \n",
+       "3  False       2  35771           Production  Aditya Chopra  Aditya Chopra   \n",
+       "4  False       2  35771           Production  Aditya Chopra  Aditya Chopra   \n",
+       "\n",
+       "   popularity                      profile_path                 credit_id  \\\n",
+       "0       1.400  /yfmm3VIGRZ8RDRQ0pjn3Vizw6WC.jpg  57a3054a9251417c57000d7a   \n",
+       "1       0.656  /uDthb94NlawtgRT8BKufFkZdJR5.jpg  57a304a39251410cd20008a5   \n",
+       "2       0.732                              None  57a3042b9251412769000193   \n",
+       "3       0.732                              None  52fe47d69251416c750a71af   \n",
+       "4       0.732                              None  5d6a2a3a7776f0000f7387b8   \n",
+       "\n",
+       "   department            job  movie_id  \n",
+       "0        Crew  Choreographer     19404  \n",
+       "1  Production       Producer     19404  \n",
+       "2     Writing     Screenplay     19404  \n",
+       "3   Directing       Director     19404  \n",
+       "4     Writing       Dialogue     19404  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# crew 정보 csv파일로 저장 \n",
     "crews=pd.DataFrame(all_crew_list)\n",
-    "crews.info()\n"
+    "crews.info()\n",
+    "crews.head()"
    ]
   },
   {
@@ -422,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +581,7 @@
     "                       charset=\"utf8\")\n",
     "\n",
     "cursor = conn.cursor()\n",
-    "cursor.execute('DELETE FROM crew')\n",
+    "# cursor.execute('DELETE FROM crew')\n",
     "#error_list=[]\n",
     "for a in crews.values:\n",
     "    sql= \"\"\"INSERT INTO crew \n",
