--- a/scripts/team3_data_collection_now_playing_movies.ipynb
+++ b/scripts/team3_data_collection_now_playing_movies.ipynb
@@ -493,7 +493,7 @@
     "\n",
     "popular_movies = []\n",
     "for i in error_list:\n",
-    "        for e in e:\n",
+    "        for e in i:\n",
     "                url=\"https://api.themoviedb.org/3/movie/{0}?api_key={1}&language=ko-KR\".format(e,'36927ad1d2817ff0fa31947e47d186fd')\n",
     "                response = requests.get(url)\n",
     "                popular_movies.append(json.loads(response.content))"
