--- a/scripts/team3_data_collection_upcoming_movies.ipynb
+++ b/scripts/team3_data_collection_upcoming_movies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,26 +35,26 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 49 entries, 0 to 48\n",
+      "RangeIndex: 2 entries, 0 to 1\n",
       "Data columns (total 14 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
-      " 0   adult              49 non-null     bool   \n",
-      " 1   backdrop_path      9 non-null      object \n",
-      " 2   genre_ids          49 non-null     object \n",
-      " 3   id                 49 non-null     int64  \n",
-      " 4   original_language  49 non-null     object \n",
-      " 5   original_title     49 non-null     object \n",
-      " 6   overview           49 non-null     object \n",
-      " 7   popularity         49 non-null     float64\n",
-      " 8   poster_path        23 non-null     object \n",
-      " 9   release_date       49 non-null     object \n",
-      " 10  title              49 non-null     object \n",
-      " 11  video              49 non-null     bool   \n",
-      " 12  vote_average       49 non-null     int64  \n",
-      " 13  vote_count         49 non-null     int64  \n",
+      " 0   adult              2 non-null      bool   \n",
+      " 1   backdrop_path      2 non-null      object \n",
+      " 2   genre_ids          2 non-null      object \n",
+      " 3   id                 2 non-null      int64  \n",
+      " 4   original_language  2 non-null      object \n",
+      " 5   original_title     2 non-null      object \n",
+      " 6   overview           2 non-null      object \n",
+      " 7   popularity         2 non-null      float64\n",
+      " 8   poster_path        2 non-null      object \n",
+      " 9   release_date       2 non-null      object \n",
+      " 10  title              2 non-null      object \n",
+      " 11  video              2 non-null      bool   \n",
+      " 12  vote_average       2 non-null      int64  \n",
+      " 13  vote_count         2 non-null      int64  \n",
       "dtypes: bool(2), float64(1), int64(3), object(8)\n",
-      "memory usage: 4.8+ KB\n"
+      "memory usage: 324.0+ bytes\n"
      ]
     }
    ],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -122,27 +122,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>598331</td>\n",
+       "      <td>763329</td>\n",
        "      <td>en</td>\n",
-       "      <td>Rumble</td>\n",
-       "      <td></td>\n",
-       "      <td>15.393</td>\n",
-       "      <td>/mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg</td>\n",
-       "      <td>2022-02-17</td>\n",
-       "      <td>럼블</td>\n",
+       "      <td>Red Rocket</td>\n",
+       "      <td>L.A에서 포르노 배우로 활동하던 마이키는 빈털터리가 되자 별거 중이었던 아내의 집...</td>\n",
+       "      <td>13.271</td>\n",
+       "      <td>/345gLhiNpItU1ICx8OxJQwjgPmH.jpg</td>\n",
+       "      <td>2022-01-06</td>\n",
+       "      <td>레드 로켓</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>619803</td>\n",
-       "      <td>ko</td>\n",
-       "      <td>범죄도시 2</td>\n",
-       "      <td>가리봉동 소탕작전 이후 4년, 괴물형사 마석도(마동석)과 금천서 강력반이 강력한 미...</td>\n",
-       "      <td>6.453</td>\n",
-       "      <td>/sUK97eO2mgHqwQ2ZMLjpMvuon6M.jpg</td>\n",
-       "      <td>2022-01-01</td>\n",
-       "      <td>범죄도시 2</td>\n",
+       "      <td>598331</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Rumble</td>\n",
+       "      <td></td>\n",
+       "      <td>16.030</td>\n",
+       "      <td>/mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg</td>\n",
+       "      <td>2022-02-17</td>\n",
+       "      <td>럼블</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -152,23 +152,23 @@
       ],
       "text/plain": [
        "       id original_language original_title  \\\n",
-       "0  598331                en         Rumble   \n",
-       "1  619803                ko         범죄도시 2   \n",
+       "0  763329                en     Red Rocket   \n",
+       "1  598331                en         Rumble   \n",
        "\n",
        "                                            overview  popularity  \\\n",
-       "0                                                         15.393   \n",
-       "1  가리봉동 소탕작전 이후 4년, 괴물형사 마석도(마동석)과 금천서 강력반이 강력한 미...       6.453   \n",
+       "0  L.A에서 포르노 배우로 활동하던 마이키는 빈털터리가 되자 별거 중이었던 아내의 집...      13.271   \n",
+       "1                                                         16.030   \n",
        "\n",
-       "                        poster_path release_date   title  vote_average  \\\n",
-       "0  /mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg   2022-02-17      럼블             0   \n",
-       "1  /sUK97eO2mgHqwQ2ZMLjpMvuon6M.jpg   2022-01-01  범죄도시 2             0   \n",
+       "                        poster_path release_date  title  vote_average  \\\n",
+       "0  /345gLhiNpItU1ICx8OxJQwjgPmH.jpg   2022-01-06  레드 로켓             0   \n",
+       "1  /mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg   2022-02-17     럼블             0   \n",
        "\n",
        "   vote_count  \n",
        "0           0  \n",
        "1           0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,27 +218,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>598331</td>\n",
+       "      <td>763329</td>\n",
        "      <td>en</td>\n",
-       "      <td>Rumble</td>\n",
-       "      <td></td>\n",
-       "      <td>15.393</td>\n",
-       "      <td>/mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg</td>\n",
-       "      <td>2022-02-17</td>\n",
-       "      <td>럼블</td>\n",
+       "      <td>Red Rocket</td>\n",
+       "      <td>L.A에서 포르노 배우로 활동하던 마이키는 빈털터리가 되자 별거 중이었던 아내의 집...</td>\n",
+       "      <td>13.271</td>\n",
+       "      <td>/345gLhiNpItU1ICx8OxJQwjgPmH.jpg</td>\n",
+       "      <td>2022-01-06</td>\n",
+       "      <td>레드 로켓</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>619803</td>\n",
-       "      <td>ko</td>\n",
-       "      <td>범죄도시 2</td>\n",
-       "      <td>가리봉동 소탕작전 이후 4년, 괴물형사 마석도(마동석)과 금천서 강력반이 강력한 미...</td>\n",
-       "      <td>6.453</td>\n",
-       "      <td>/sUK97eO2mgHqwQ2ZMLjpMvuon6M.jpg</td>\n",
-       "      <td>2022-01-01</td>\n",
-       "      <td>범죄도시 2</td>\n",
+       "      <td>598331</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Rumble</td>\n",
+       "      <td></td>\n",
+       "      <td>16.030</td>\n",
+       "      <td>/mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg</td>\n",
+       "      <td>2022-02-17</td>\n",
+       "      <td>럼블</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -247,24 +247,24 @@
        "</div>"
       ],
       "text/plain": [
-       "   movie_id original_language subtitle  \\\n",
-       "0    598331                en   Rumble   \n",
-       "1    619803                ko   범죄도시 2   \n",
+       "   movie_id original_language    subtitle  \\\n",
+       "0    763329                en  Red Rocket   \n",
+       "1    598331                en      Rumble   \n",
        "\n",
        "                                            overview  popularity  \\\n",
-       "0                                                         15.393   \n",
-       "1  가리봉동 소탕작전 이후 4년, 괴물형사 마석도(마동석)과 금천서 강력반이 강력한 미...       6.453   \n",
+       "0  L.A에서 포르노 배우로 활동하던 마이키는 빈털터리가 되자 별거 중이었던 아내의 집...      13.271   \n",
+       "1                                                         16.030   \n",
        "\n",
-       "                         posterpath release_date   title  vote_average  \\\n",
-       "0  /mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg   2022-02-17      럼블             0   \n",
-       "1  /sUK97eO2mgHqwQ2ZMLjpMvuon6M.jpg   2022-01-01  범죄도시 2             0   \n",
+       "                         posterpath release_date  title  vote_average  \\\n",
+       "0  /345gLhiNpItU1ICx8OxJQwjgPmH.jpg   2022-01-06  레드 로켓             0   \n",
+       "1  /mVKfyo2YQ1Sf0fKzZfc5t9HM6eK.jpg   2022-02-17     럼블             0   \n",
        "\n",
        "   vote_count  \n",
        "0           0  \n",
        "1           0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,26 +278,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "movie_id              0\n",
-       "original_language     0\n",
-       "subtitle              0\n",
-       "overview              0\n",
-       "popularity            0\n",
-       "posterpath           26\n",
-       "release_date          0\n",
-       "title                 0\n",
-       "vote_average          0\n",
-       "vote_count            0\n",
+       "movie_id             0\n",
+       "original_language    0\n",
+       "subtitle             0\n",
+       "overview             0\n",
+       "popularity           0\n",
+       "posterpath           0\n",
+       "release_date         0\n",
+       "title                0\n",
+       "vote_average         0\n",
+       "vote_count           0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -338,258 +338,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>598331</td>\n",
+       "      <td>763329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>619803</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>647250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>587628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>718685</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>866346</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>586373</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>551405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>257094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>869183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>811363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>853810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>839738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>874860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>848526</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>587357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>850683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>773820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>632725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>850025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>629103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>823970</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>778793</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>531228</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>877656</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>850015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>839902</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>855862</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>849988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>896349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>629040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>748610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>725895</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>887341</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>891943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>849996</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>645992</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>850002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>877366</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>857701</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>771536</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>829361</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>797825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>869213</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>880607</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>224291</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>46</th>\n",
-       "      <td>850007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>851248</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>901371</td>\n",
+       "      <td>598331</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    movie_id\n",
-       "0     598331\n",
-       "1     619803\n",
-       "2     647250\n",
-       "3     587628\n",
-       "4     718685\n",
-       "5     866346\n",
-       "6     586373\n",
-       "7     551405\n",
-       "8     257094\n",
-       "9     869183\n",
-       "10    811363\n",
-       "11    853810\n",
-       "12    839738\n",
-       "13    874860\n",
-       "14    848526\n",
-       "15    587357\n",
-       "16    850683\n",
-       "17    773820\n",
-       "18    632725\n",
-       "19    850025\n",
-       "20    629103\n",
-       "21    823970\n",
-       "22    778793\n",
-       "23    531228\n",
-       "24    877656\n",
-       "25    850015\n",
-       "26    839902\n",
-       "27    855862\n",
-       "28    849988\n",
-       "29    896349\n",
-       "30    629040\n",
-       "31    748610\n",
-       "32    725895\n",
-       "33    887341\n",
-       "34    891943\n",
-       "35    849996\n",
-       "36    645992\n",
-       "37    850002\n",
-       "38    877366\n",
-       "39    857701\n",
-       "40    771536\n",
-       "41    829361\n",
-       "42    797825\n",
-       "43    869213\n",
-       "44    880607\n",
-       "45    224291\n",
-       "46    850007\n",
-       "47    851248\n",
-       "48    901371"
+       "   movie_id\n",
+       "0    763329\n",
+       "1    598331"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,6 +393,26 @@
     "cursor.close()\n",
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_list"
+   ]
   }
  ],
  "metadata": {
@@ -649,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
